tests/ui/issues/issue-6458-4.rs
fn foo(b: bool) -> Result<bool,String> { //~ ERROR mismatched types
    Err("bar".to_string());
}

fn main() {
    foo(false);
}
